static/css/index.css
.mainAllCourses {
    display: flex;
    flex-wrap: wrap;
    padding: 2rem;
    justify-content: space-evenly;
}

:root {
    --primary-color: #185770;
    --secondary-color: #c2c9cc;
    --freecourse-color: #65d882;
  }
  
  .coursecard {
    position: relative;
    border: 3px solid var(--primary-color);
    background-color: var(--secondary-color);
    height: 230px;
    width: 380px;
    background-size: cover;
    margin: .5rem;
    overflow: hidden;
    z-index: 1;
}

.coursecard::after {
    position: absolute;
    content: "";
    background-size: cover;
    top: 0; 
    left: 0;
    width: 100%; 
    height: 100%;  
    opacity: .3; 
    z-index: -1;
    background-image: var(--bgimg);
  }
  
  .coursecard__contents {
    margin: 0 0.6rem;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  
  .coursecard__title {
    color: var(--primary-color);
    font-weight: 700;
    font-size: 1.8rem;
    margin-top: 0.3rem;
  }

  .coursecard__link {
    text-decoration: none;
  }
  
  .coursecard__tags {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
  }
  
  .coursecard__tag {
    color: var(--secondary-color);
    background-color: var(--primary-color);
    padding: 0.3rem 0.5rem;
    border-radius: 5px;
    margin: 0.3rem;
  }
  
  .coursecard__footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: var(--primary-color);
    font-weight: 600;
  }
  
  .coursecard__price {
    font-size: 1.2rem;
  }
  
  .coursecard__pricefree {
    background-color: var(--freecourse-color);
    padding: 0.3rem 0.6rem;
    border: 2px solid var(--primary-color);
  }
  
  .coursecard__starrating {
    font-size: 1.3rem;
    display: flex;   
  }

  .coursecard__starrating__starsWrapper {
    height: 24px;
    width: 120px;
    background-image: url("../assets/star-empty.svg");
  }

  .coursecard__starrating__star {
    background-image: url("../assets/star-filled.svg");
    height: 24px;
    position: absolute;
    color: transparent;
  }

  .coursecard__votecount {
    font-weight: 500;
  }
 
.card {
    flex: 0 1 calc(25% - 1em);
}

.noResults {
  text-align: center;
}

